// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TradeHistoryCard Test Test Snapshot Test Snapshot 1`] = `
<Styled(Card)
  margin="0 10px 20px 10px"
  title={
    <styled.div>
      Market Trades
    </styled.div>
  }
  width="740px"
>
  <styled.div
    horizontal={true}
    style={
      Object {
        "marginTop": "5px",
      }
    }
  >
    <styled.div
      noMargin={true}
    >
      <div
        className="status-list-wrapper"
      >
        <Table
          bordered={false}
          className=""
          dataSource={
            Array [
              Object {
                "Amount": "123",
                "Link": "https://kovan.etherscan.io/tx/txHash",
                "Pair": "test",
                "Price": "123",
                "Side": "Sell",
                "Time": "01-01 00:00:00",
                "Type": "Limit",
                "key": "txHash",
              },
            ]
          }
          indentSize={20}
          loading={false}
          locale={Object {}}
          pagination={
            Object {
              "pageSize": 6,
              "simple": true,
              "size": "small",
            }
          }
          rowKey="key"
          showHeader={true}
          size="default"
          sortDirections={
            Array [
              "ascend",
              "descend",
            ]
          }
          style={
            Object {
              "border": "none",
              "width": 520,
            }
          }
          useFixedHeader={false}
        >
          <Column
            className="columnAlignLeft"
            dataIndex="Pair"
            render={[Function]}
            title="Pair"
            width={165}
          />
          <Column
            className="columnAlignLeft"
            dataIndex="Time"
            title="Time"
            width={140}
          />
          <Column
            className="antdColumnAlignRight"
            dataIndex="Price"
            render={[Function]}
            title="Price"
            width={100}
          />
          <Column
            className="antdColumnAlignRight"
            dataIndex="Amount"
            title="Amount"
            width={100}
          />
          <Column
            className="imgColumn"
            dataIndex="Link"
            render={[Function]}
            title=""
          />
        </Table>
      </div>
    </styled.div>
    <styled.div
      noMargin={true}
      style={
        Object {
          "width": 200,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #E9E9E9",
          }
        }
      >
        <Checkbox
          checked={false}
          indeterminate={true}
          onChange={[Function]}
        >
          Check all
        </Checkbox>
      </div>
      <br />
      <CheckboxGroup
        onChange={[Function]}
        options={
          Array [
            "aETH|WETH",
          ]
        }
        style={
          Object {
            "padding": "10, 5",
          }
        }
        value={Array []}
      />
    </styled.div>
  </styled.div>
</Styled(Card)>
`;

exports[`TradeHistoryCard Test Test Snapshot Test getDerivedStateFromProps 1`] = `
<Styled(Card)
  margin="0 10px 20px 10px"
  title={
    <styled.div>
      Market Trades
    </styled.div>
  }
  width="740px"
>
  <styled.div
    horizontal={true}
    style={
      Object {
        "marginTop": "5px",
      }
    }
  >
    <styled.div
      noMargin={true}
    >
      <div
        className="status-list-wrapper"
      >
        <Table
          bordered={false}
          className=""
          dataSource={
            Array [
              Object {
                "Amount": "120",
                "Link": "https://kovan.etherscan.io/tx/test",
                "Pair": "test",
                "Price": "12",
                "Side": "Buy",
                "Time": "01-01 00:00:00",
                "Type": "Market",
                "key": "test",
              },
            ]
          }
          indentSize={20}
          loading={false}
          locale={Object {}}
          pagination={
            Object {
              "pageSize": 6,
              "simple": true,
              "size": "small",
            }
          }
          rowKey="key"
          showHeader={true}
          size="default"
          sortDirections={
            Array [
              "ascend",
              "descend",
            ]
          }
          style={
            Object {
              "border": "none",
              "width": 520,
            }
          }
          useFixedHeader={false}
        >
          <Column
            className="columnAlignLeft"
            dataIndex="Pair"
            render={[Function]}
            title="Pair"
            width={165}
          />
          <Column
            className="columnAlignLeft"
            dataIndex="Time"
            title="Time"
            width={140}
          />
          <Column
            className="antdColumnAlignRight"
            dataIndex="Price"
            render={[Function]}
            title="Price"
            width={100}
          />
          <Column
            className="antdColumnAlignRight"
            dataIndex="Amount"
            title="Amount"
            width={100}
          />
          <Column
            className="imgColumn"
            dataIndex="Link"
            render={[Function]}
            title=""
          />
        </Table>
      </div>
    </styled.div>
    <styled.div
      noMargin={true}
      style={
        Object {
          "width": 200,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #E9E9E9",
          }
        }
      >
        <Checkbox
          checked={false}
          indeterminate={true}
          onChange={[Function]}
        >
          Check all
        </Checkbox>
      </div>
      <br />
      <CheckboxGroup
        onChange={[Function]}
        options={
          Array [
            "MOZART-PPT|WETH",
          ]
        }
        style={
          Object {
            "padding": "10, 5",
          }
        }
        value={Array []}
      />
    </styled.div>
  </styled.div>
</Styled(Card)>
`;

exports[`TradeHistoryCard Test Test Snapshot Test getDerivedStateFromProps 2`] = `
<Styled(Card)
  margin="0 10px 20px 10px"
  title={
    <styled.div>
      Market Trades
    </styled.div>
  }
  width="740px"
>
  <styled.div
    horizontal={true}
    style={
      Object {
        "marginTop": "5px",
      }
    }
  >
    <styled.div
      noMargin={true}
    >
      <div
        className="status-list-wrapper"
      >
        <Table
          bordered={false}
          className=""
          dataSource={
            Array [
              Object {
                "Amount": "120",
                "Link": "https://kovan.etherscan.io/tx/test",
                "Pair": "test",
                "Price": "12",
                "Side": "Buy",
                "Time": "01-01 00:00:00",
                "Type": "Market",
                "key": "test",
              },
            ]
          }
          indentSize={20}
          loading={false}
          locale={Object {}}
          pagination={
            Object {
              "pageSize": 6,
              "simple": true,
              "size": "small",
            }
          }
          rowKey="key"
          showHeader={true}
          size="default"
          sortDirections={
            Array [
              "ascend",
              "descend",
            ]
          }
          style={
            Object {
              "border": "none",
              "width": 520,
            }
          }
          useFixedHeader={false}
        >
          <Column
            className="columnAlignLeft"
            dataIndex="Pair"
            render={[Function]}
            title="Pair"
            width={165}
          />
          <Column
            className="columnAlignLeft"
            dataIndex="Time"
            title="Time"
            width={140}
          />
          <Column
            className="antdColumnAlignRight"
            dataIndex="Price"
            render={[Function]}
            title="Price"
            width={100}
          />
          <Column
            className="antdColumnAlignRight"
            dataIndex="Amount"
            title="Amount"
            width={100}
          />
          <Column
            className="imgColumn"
            dataIndex="Link"
            render={[Function]}
            title=""
          />
        </Table>
      </div>
    </styled.div>
    <styled.div
      noMargin={true}
      style={
        Object {
          "width": 200,
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #E9E9E9",
          }
        }
      >
        <Checkbox
          checked={false}
          indeterminate={true}
          onChange={[Function]}
        >
          Check all
        </Checkbox>
      </div>
      <br />
      <CheckboxGroup
        onChange={[Function]}
        options={
          Array [
            "MOZART-PPT|WETH",
          ]
        }
        style={
          Object {
            "padding": "10, 5",
          }
        }
        value={Array []}
      />
    </styled.div>
  </styled.div>
</Styled(Card)>
`;
